--- a/examples/HelloWorld-Android/app/src/main/res/layout/activity_main.xml
+++ b/examples/HelloWorld-Android/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="com.example.android.helloworld.MainActivity">
 
     <TextView
+        android:id="@+id\hello_word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
